gateway/envoy.yml
static_resources:
  listeners:
  - name: grpc_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": ://googleapis.com
          stat_prefix: grpc_json
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/messenger.MessengerCoreService/" }
                route: 
                  cluster: core_service_cluster
                  timeout: 0s 
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": ://googleapis.com

  clusters:
  - name: core_service_cluster
    connect_timeout: 0.5s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {} 
    load_assignment:
      cluster_name: core_service_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: core, port_value: 50051 }
